--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>mercadolibre.com.ar.operacionfuegodequasar</groupId>
 	<artifactId>proxy-ml</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	<name>proxy-ml</name>
 	<description>proxy para mercado libre</description>
