--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 		<version>2.1.3.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>mercadolibre.com.ar.operacionfuegodequasar</groupId>
+	<groupId>ar.com.mercadolibre</groupId>
 	<artifactId>proxy-ml</artifactId>
-	<version>1.0</version>
+	<version>2.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>proxy-ml</name>
 	<description>proxy para mercado libre</description>
@@ -17,14 +17,20 @@
 		<java.version>8</java.version>
 	</properties>
 	<dependencies>
+	
+		<dependency>
+			<groupId>ar.com.mercadolibre</groupId>
+			<artifactId>proxy-commons-statistic</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
+		
 		<!-- 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
