--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,64 @@
-spring.application.name: proxy-ml
-
 springdoc.api-docs.path = /proxy-ml
 
-spring.datasource.platform: postgres
-spring.datasource.driverClassName: org.postgresql.Driver
-spring.datasource.url: jdbc:postgresql://localhost:5432/
-spring.datasource.username: proxydb
-spring.datasource.password: proxydb
+spring.application.name= proxy-ml
 
-spring.datasource.hikari.poolName: ${spring.application.name}
-spring.datasource.hikari.maximumPoolSize: 3
-spring.datasource.hikari.connectionTimeout: 3000
-spring.datasource.hikari.leakDetectionThreshold: 7000
-spring.datasource.hikari.autoCommit: false
-spring.datasource.hikari.registerMbeans: true
-spring.datasource.hikari.connectionTestQuery: SELECT 1
+spring.datasource.platform= postgres
+spring.datasource.driverClassName= org.postgresql.Driver
+spring.datasource.url= jdbc:postgresql://localhost:5432/
+spring.datasource.username= proxydb
+spring.datasource.password= proxydb
 
-spring.jpa.database: POSTGRESQL
+spring.datasource.hikari.poolName= ${spring.application.name}
+spring.datasource.hikari.maximumPoolSize= 3
+spring.datasource.hikari.connectionTimeout= 3000
+spring.datasource.hikari.leakDetectionThreshold= 7000
+spring.datasource.hikari.autoCommit= false
+spring.datasource.hikari.registerMbeans= true
+spring.datasource.hikari.connectionTestQuery= SELECT 1
 
-spring.jpa.hibernate.ddl-auto: none
-spring.jpa.hibernate.naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.show-sql: true
+spring.jpa.database= POSTGRESQL
 
-spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation: true
+spring.jpa.hibernate.ddl-auto= none
+spring.jpa.hibernate.naming.physical-strategy= org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.show-sql= true
 
-spring.jpa.open-in-view: false
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+
+spring.jpa.open-in-view= false
 #enabling the H2 console
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 
-spring.flyway.enabled: true
-spring.flyway.locations: classpath:/db/scripts/migration
-spring.flyway.schemas: public
+spring.flyway.enabled= true
+spring.flyway.locations= classpath:/db/scripts/migration
+spring.flyway.schemas= public
+
+proxy.properties.maxpoolsize= 50000
+proxy.properties.maxthreadpool= 50000
+proxy.properties.keepalivetime=7
+proxy.properties.maxthreadpoolsize=10000
+proxy.properties.expirationpolicyip=3
+proxy.properties.expirationpolicyquerypathandip=4
+proxy.properties.expirationpolicyquerypath=7
+proxy.properties.expirationpolicyflooding=12
+proxy.properties.mercadolibreapiurl=https://api.mercadolibre.com
+
+proxy.strings.initiated=service iniciated
+proxy.strings.unknownshutdown=unknown shutdown
+proxy.strings.waiting=Waiting for client on port
+proxy.strings.alreadyiniciated=The service is already iniciated
+proxy.strings.serviceisstoped=The service is stoped
+proxy.strings.serviceisalreadystoped=The service is already stoped
+proxy.strings.stoppedbytheuser=stopped by the user
+proxy.strings.proxyservicethread=ProxyService-Thread
+proxy.strings.serverclosed=Server closed
+proxy.strings.proxyagent=Proxy-agent: ProxyService/2.0
+proxy.strings.error=error
+proxy.strings.ok=ok
+proxy.strings.nocontent=no content
+proxy.strings.favicon= favicon.ico
+proxy.strings.httpver=HTTP/1.1
+proxy.strings.contenttype=Content-Type
+proxy.strings.applicationjson= application/json
+proxy.strings.accept=Accept
+proxy.strings.authorization=Authorization
