--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 			<artifactId>commons-collections4</artifactId>
 			<version>4.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
@@ -78,11 +79,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
 		<finalName>proxy-ml</finalName>
-<resources>
+		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>false</filtering>
@@ -119,5 +127,6 @@
 					</configuration>
 				</plugin>
 			</plugins>
-		</pluginManagement>	</build>
+		</pluginManagement>
+	</build>
 </project>
